# ComfyUI-SAM-Body4D

./: README.md  README_EN.md  README_de.md  __init__.py  constants.py  example_workflow.json  install.py  pyproject.toml  requirements.txt  test_imports.py
configs/: CHECKPOINTS.md  body4d_example.yaml
docs/: SAM3_API_COMPATIBILITY.md
lib/: blender_export_animated_fbx.py  skeleton_utils.py
nodes/: __init__.py  base.py
nodes/input/: __init__.py  load_image_batch.py
nodes/processing/: __init__.py  body4d_process.py  fbx_export.py  image_sequence.py  load_model.py  skeleton_extract.py
